Setup static files for production.

--- a/epio.ini
+++ b/epio.ini
@@ -27,4 +27,5 @@ DJANGO_SETTINGS_MODULE = glitchtools.settings
 base = glitchtools
 
 [static]
-/static/admin = ../shortcuts/django-admin-media/
+/static = static/
+/static/admin = %(django_admin_media)s/
