Fix my production API creds.

--- a/epio.ini
+++ b/epio.ini
@@ -18,7 +18,7 @@ requirements = requirements.txt
 [symlinks]
 # Any symlinks you'd like to add. As an example, link 'config.py' to 'configs/epio.py'
 # config.py = configs/epio.py
-.glitchapi-epio.txt = .glitchapi.txt
+.glitchapi.txt = .glitchapi-epio.txt
 
 [env]
 DJANGO_SETTINGS_MODULE = glitchtools.settings
