Celery working on ep.io.

--- a/epio.ini
+++ b/epio.ini
@@ -9,9 +9,7 @@ requirements = requirements.txt
 
 [services]
 postgres = true
-
-# Uncomment to enable the Redis service
-# redis = true
+redis = true
 
 
 [symlinks]
@@ -28,3 +26,13 @@ base = glitchtools
 [static]
 /static = static/
 /static/admin = %(django_admin_media)s/
+
+[celery]
+base = glitchtools
+djcelery = true
+
+[process-celeryd]
+command = python manage.py celeryd -n fakehost-%(app_id)s-p%(port)s.celery -BE --pidfile=../data/celeryd.pid
+
+[process-celerycam]
+command = python manage.py celerycam --pidfile=../data/celeryev.pid
