Go go gadget eventlet.

--- a/epio.ini
+++ b/epio.ini
@@ -32,7 +32,7 @@ base = glitchtools
 djcelery = true
 
 [process-celeryd]
-command = python manage.py celeryd -n fakehost-%(app_id)s-p%(port)s.celery -BE --pidfile=../data/celeryd.pid
+command = python manage.py celeryd -n fakehost-%(app_id)s-p%(port)s.celery -BE --pidfile=../data/celeryd.pid -P eventlet -c 1000
 
 [process-celerycam]
 command = python manage.py celerycam --pidfile=../data/celeryev.pid
